--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "add": "^2.0.6",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "react-transition-group": "^4.4.1",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/node": "^14.14.19",
