--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "add": "^2.0.6",
+    "dotenv-load": "^2.0.0",
+    "emailjs-com": "^2.6.4",
     "next": "10.0.4",
+    "next-env": "^1.1.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
