--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "target": "es5",
     "types": ["@emotion/react/types/css-prop"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/pages/_document.tsx"
+  ],
   "exclude": ["node_modules"]
 }
