--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,32 +1,18 @@
 name: E2E Tests
 on:
   push:
-    branches:
-      - main
-      - dev
-    pull_request:
-      types: [opened, synchronize, reopen]
-      branches:
-        - dev
+  pull_request:
+    types: [opened, synchronize, reopen]
+
 jobs:
   cypress-run:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-
-      - name: Start App
-        run: |
-          yarn
-          NODE_ENV=test yarn build
-          NODE_ENV=test yarn start &
-
-      - name: Run E2E
-        run: |
-          yarn cypress:ci
-
-      - uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: Cypress E2E Videos
-          path: cypress/videos
+      - name: Install dependencies
+        run: yarn
+      - name: Build
+        run: yarn build
+      - name: Cypress run
+        run: yarn run e2e:ci
