--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cypress": "cypress",
     "cypress:open": "cypress open",
     "e2e": "start-server-and-test dev 3000 cypress:open",
+    "e2e:ci": "start-server-and-test start 3000 cypress:ci",
     "cypress:ci": "cypress run"
   },
   "dependencies": {
