--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "@types/node": "^14.14.19",
     "@types/react": "^17.0.0",
     "cypress": "^6.2.1",
     "start-server-and-test": "^1.11.7",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "url-loader": "^4.1.1"
   }
 }
